--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-adsense": "^0.1.0",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
+    "react-share": "^3.0.0",
     "react-typography": "^0.16.19",
     "typeface-merriweather": "0.0.72",
     "typeface-montserrat": "0.0.54",
